--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.project.name = msUsuario
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/eureka
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=elvisserrano
-spring.datasource.password=
+#spring.datasource.url=jdbc:postgresql://localhost:5432/eureka
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=elvisserrano
+#spring.datasource.password=
 
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=none
 
 spring.liquibase.change-log=classpath:/db/changelog/liquibase.xml
 spring.liquibase.enabled=true
