--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.liquibase.enabled=true
 spring.liquibase.contexts=dev,prod
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+server.port=8080
