--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.liquibase.contexts=dev,prod
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-server.port=8080
+--server.port=$PORT
